--- a/less/home-page.less
+++ b/less/home-page.less
@@ -5,7 +5,7 @@
   .intro {
 
     img {
-      padding-top: 120px;
+      padding-top: 110px;
       border-radius: 6px;
 
       @media @phone {
@@ -68,7 +68,7 @@
 
     @media @phone {
       display: flex;
-      flex-direction: column;
+      flex-direction: column-reverse;
       padding:18px;
     }
 
